# rust_gta_afk

./: Cargo.toml  README.md
src/: main.rs
